--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,21 @@
 {
 	"scripts": {
-		"start:server": "nodemon server.ts",
+		"start": "ts-node server.ts",
+		"deploy": "git push heroku main",
+		"log": "heroku logs --tail",
 		"dev": "nodemon server.ts"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.10.1",
-		"bcrypt": "^5.1.0",
-		"bcryptjs": "^2.4.3",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"jsonwebtoken": "^9.0.0"
-	},
-	"devDependencies": {
 		"@types/express": "^4.17.16",
 		"@types/node": "^18.11.18",
+		"bcrypt": "^5.1.0",
+		"bcryptjs": "^2.4.3",
+		"cloudinary": "^1.36.4",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.0",
+		"multer": "^1.4.5-lts.1",
 		"prisma": "^4.9.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
